--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,6 +14,22 @@ code {
     monospace;
 }
 
+#userCard{
+  width: 200px;
+  margin: 10px;
+  padding: 25px;
+  box-shadow:  0 0 20px rgba(0, 0, 0, 0.1), 0 0 40px rgba(0, 0, 0, 0.12);
+  border-radius: 35px;
+  /* text-align: center;  */
+  color: black;
+  background: #d7d7d7;
+  font-size:14px;
+}
+
+#HPText{
+  color: red;
+}
+
 .CharacterCard{
   width: 200px;
   margin: 10px;
@@ -42,4 +58,124 @@ code {
   width: 50px;
   margin:10px;
   flex-direction: column;
+}
+
+#characterPageBG{
+  
+  color: black;
+  background: #d7d7d7;
+  width: 800px;
+
+  margin: auto;
+}
+
+#characterPageInfo {
+  justify-content: center;
+  display: flex;
+  background: #d7d7d7;
+  width: 800px;
+  /* margin: 0px 400px 0px; */
+
+}
+
+/* #stats{
+  justify-content: center;
+} */
+#rest{
+  background: #d7d7d7;
+  /* display: flex; */
+  justify-content: left;
+  width: 600px;
+  height: 300px;
+  color: black;
+  font-weight: bold;
+  /* padding: 50px; */
+  margin: auto;
+}
+
+#itemPage{
+  background: #d7d7d7;
+  display: flex;
+  justify-content: left;
+  /* align-items: center; */
+  flex-wrap: wrap;
+  width: 200px;
+  height: 300px;
+  color: black;
+  font-weight: bold;
+  /* padding: 50px; */
+  margin: auto;
+  overflow-y: auto;
+}
+
+#restButtons{
+  display: flex;
+  justify-content: center;
+  
+}
+
+.custButton{
+  background-color: #98c1d9;
+  color: black;
+  cursor: pointer;
+  font-weight: bold;
+  font-size: 30px;
+  margin: 0px 5px 0px;
+  /* text-decoration: none; */
+  border-radius: 18px;
+  transition-duration: 0.4s;
+}
+
+#ChangeChar{
+  background-color: #98c1d9;
+  color: black;
+  cursor: pointer;
+  font-weight: bold;
+  font-size: 10px;
+  margin: 0px 5px 0px;
+  /* text-decoration: none; */
+  border-radius: 18px;
+  transition-duration: 0.4s;
+}
+
+#ChangeChar:hover{
+  background-color: red; /* Green */
+  color: white;
+}
+
+.useButton{
+  background-color: #98c1d9;
+  color: purple;
+  cursor: pointer;
+  font-weight: bold;
+  font-size: 14px;
+  /* margin: 0px 5px 0px; */
+  /* text-decoration: none; */
+  border-radius: 10px;
+  transition-duration: 0.4s;
+}
+
+.useButton:hover{
+  background-color: green; /* Green */
+  color: Gold;
+}
+
+#storeGold {
+  color: gold;
+}
+
+.upButton{
+  background-color: #98c1d9;
+  font-weight: bold;
+}
+
+.downButton{
+  background-color: #98c1d9;
+  font-weight: bold;
+}
+
+
+.custButton:hover{
+  background-color: #4CAF50; /* Green */
+  color: white;
 }
