--- a/client/src/index.css
+++ b/client/src/index.css
@@ -21,7 +21,7 @@ code {
 #userCard{
   width: 200px;
   margin: 10px;
-  padding: 25px;
+  padding: 0px 25px 5px;
   box-shadow:  0 0 20px rgba(0, 0, 0, 0.1), 0 0 40px rgba(0, 0, 0, 0.12);
   border-radius: 35px;
   /* text-align: center;  */
@@ -114,7 +114,7 @@ code {
   height: 300px;
   color: black;
   font-weight: bold;
-  /* padding: 50px; */
+  padding: 5px 10px 0px;
   margin: auto;
 }
 
