fixed text bug in battles

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -286,10 +286,12 @@ code {
   height: 200px;
   color: black;
   background: #d7d7d7;
+  overflow: scroll;
 }
 
 #InnerBattleText{
   margin: 9px;
+ 
 }
 
 #BattleOptions{
