made scrollbox hidden til overflow

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -286,7 +286,7 @@ code {
   height: 200px;
   color: black;
   background: #d7d7d7;
-  overflow: scroll;
+  overflow: auto;
 }
 
 #InnerBattleText{
